--- a/dez/w1/ingest_data.ipynb
+++ b/dez/w1/ingest_data.ipynb
@@ -2,16 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "6e688e91",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from  sqlalchemy import create_engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6782e576",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet('ny_taxi_data/yellow_tripdata_2021-01.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d31d4974",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_uri = \"postgresql://root:root@localhost:5432/ny_taxi\"\n",
+    "engine = create_engine(db_uri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d7e9e985",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "769"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_sql(name=\"yellow_taxi_data\", con=engine, if_exists=\"replace\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "60dc116d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with engine.begin() as conn:\n",
+    "#     query = text(\"\"\"SELECT count(*) from yellow_taxi_data\"\"\")\n",
+    "#     dff = pd.read_sql_query(query, conn)\n",
+    "# dff"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8ada826",
+   "id": "871d63a5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -19,7 +77,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6782e576",
+   "id": "e28828a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37a0599d",
    "metadata": {},
    "outputs": [],
    "source": []
